manifests/v1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: health-checker
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: health-checker
  sessionAffinity: None
  type: NodePort
