manifests/v1-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-checker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: health-checker
                port:
                  number: 8000
            path: /
            pathType: Prefix
